--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -221,6 +221,17 @@ textarea
   background: #eeeeee
   cursor: pointer
 
+.disabled-button-tooltip
+  display:inline-block
+  position:relative
+
+.disabled-button-tooltip-text
+  position:absolute
+  left: 0
+  right: 0
+  top: 0
+  bottom 0
+
 .jukutooltip
   margin-left: 10px
 
