LIVIJUKU-344 Tunnusluku-alasvetovalikko headeriin

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -32,6 +32,7 @@
             Kaikki hakemukset
           </a>
         </li>
+        <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
       </ul>
 
       <juku-user-dropdown user="user"></juku-user-dropdown>
