--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -17,6 +17,19 @@
     </li>
   </ul>
   <ul>
+    <li>Tunnusluvut</li>
+    <li>
+      <a class="navbartxt" href="#/h/tunnuslukujensyottaminen">
+        Tunnuslukujen syöttäminen
+      </a>
+    </li>
+    <li>
+      <a class="navbartxt" href="#/h/tunnuslukuraportit">
+        Tunnuslukuraportit
+      </a>
+    </li>
+  </ul>
+  <ul>
     <li>
       <div class="navbar__user__name">
         {{user.etunimi}} {{user.sukunimi}}
