--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -28,3 +28,4 @@
 @import '../scripts/components/ohje'
 @import '../scripts/components/fileDetails'
 @import '../scripts/components/fileActions'
+@import '../scripts/components/statisticDropdown'
