LIVIJUKU-345 Tunnuslukutyökalu - tietojen syöttäminen - tekninen demo

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,4 +1,5 @@
 @import './loading-bar.css'
+@import './ui-grid.min.css'
 @import '../scripts/components/tab'
 @import '../scripts/components/table'
 @import '../scripts/components/panel'
