--- a/app/scripts/views/hakija/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/hakija/tunnuslukujenSyottaminen.html
@@ -36,4 +36,11 @@
       <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-resize-columns ui-grid-edit ui-grid-row-edit class="grid"></div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Bruttoliikenteen tarjouskilpailut</h3>
+      <button id="uusiRivi" ng-click="uusiRivi()">Lisää rivi</button>
+      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-resize-columns ui-grid-edit ui-grid-row-edit class="grid"></div>
+    </div>
+  </div>
 </div>
