--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -166,7 +166,7 @@
 
         <div class="row">
           <div class="col-md-9">
-            <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
+            <h4>HAETTAVA VALTIONAVUSTUS YHTEENSÄ:</h4>
           </div>
           <div class="col-md-3">
             <div class="pull-right">
