--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -258,6 +258,9 @@ textarea
 .avustuskohde .ng-invalid-sallittu-arvo-omarahoitus.ng-dirty .help-block.ng-invalid-sallittu-arvo-omarahoitus
   display: block
 
+.varoitusvari
+  color:#ff0000;
+
 // View specific styles
 #suunnittelu
   table
