LIVIJUKU-365 Bug:Tiedostot latautuvat kahteen kertaan

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -216,12 +216,6 @@
             </ol>
           </section>
         </juku-ohje>
-        <div class="row">
-          <div class="col-md-12">
-            <juku-liite-lataus>
-            </juku-liite-lataus>
-          </div>
-        </div>
       </juku-form-section>
       <juku-form-section ng-show="onMaksatushakemus1() || onMaksatushakemus2()">
         <h3>LISÄTIETOJA KUSTANNUKSISTA JA HAKEMUKSEN ALLEKIRJOITTAJASTA</h3>
@@ -277,6 +271,8 @@
             </ol>
           </section>
         </juku-ohje>
+      </juku-form-section>
+      <juku-form-section>
         <div class="row">
           <div class="col-md-12">
             <juku-liite-lataus>
