--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -32,7 +32,7 @@
             Kaikki hakemukset
           </a>
         </li>
-        <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
+        <juku-statistic-dropdown ng-show="sallittu(user, 'view-hakemuskausi')" user="user"></juku-statistic-dropdown>
       </ul>
 
       <juku-user-dropdown user="user"></juku-user-dropdown>
