--- a/app/scripts/components/panel/index.styl
+++ b/app/scripts/components/panel/index.styl
@@ -5,7 +5,7 @@
     border: 0
     box-shadow: none
     h4
-      font-weight: 700
+      font-weight: 600
       i
         margin-right 0.5em
   .panel-heading+.panel-collapse > .panel-body
@@ -15,6 +15,6 @@
   h4
     font-weight: 400
     text-transform: uppercase
-    border-bottom: 1px solid colors.lining
     padding-bottom: 0.5em
-    margin-bottom: 1.5em
+  .row
+    margin-bottom: 1em
