--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -1,23 +1,21 @@
-<ul class="statistic-dropdown nav navbar-nav">
-  <li class="dropdown">
-    <div ng-class="{'dropdown-toggle__wrapper__active': (isActive('/h/tunnuslukujensyottaminen') || isActive('/h/tunnuslukuraportit')),'dropdown-toggle__wrapper': !(isActive('/h/tunnuslukujensyottaminen') || isActive('/h/tunnuslukuraportit'))}">
-      <a href class="dropdown-toggle">
-        <div>
-          Tunnusluvut
-        </div>
-      </a>
-    </div>
+<div class="statistic-dropdown dropdown">
+  <div class="dropdown-toggle__wrapper header__link">
+    <a href class="dropdown-toggle">
+      Tunnusluvut
+    </a>
+  </div>
+  <div class="dropdown-menu-container">
     <ul class="dropdown-menu">
       <li>
-        <a class="navbartxt" href="#/h/tunnuslukujensyottaminen">
+        <a href="#/h/tunnuslukujensyottaminen">
           Tunnuslukujen syöttäminen
         </a>
       </li>
       <li>
-        <a class="navbartxt" href="#/h/tunnuslukuraportit">
+        <a href="#/h/tunnuslukuraportit">
           Tunnuslukuraportit
         </a>
       </li>
     </ul>
-  </li>
-</ul>
+  </div>
+</div>
