LIVIJUKU-356 Liitteen nimen muutosta ei voi tallentaa, jos hakemuksessa on virheellisesti syötettyjä tietoja

--- a/app/scripts/components/liiteLataus/index.html
+++ b/app/scripts/components/liiteLataus/index.html
@@ -69,7 +69,7 @@
                     ng-show="sallittu('modify-oma-hakemus')"
                     href=""
                     title="Tallenna liitenimi"
-                    ng-click="paivitaLiiteNimi(liite.liitenumero,liite.nimiteksti, liite.nimipaate)">
+                    ng-click="paivitaLiiteNimi(liite.liitenumero,liite.nimiteksti, liite.nimipaate, liiteRiviForm.$valid)">
                     Tallenna
                   </juku-icon-link>
 
